[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/game/world/objective/Objective.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/char/boss/boss.png" type="Texture" id=2]
[ext_resource path="res://scenes/game/world/objective/Boss.gd" type="Script" id=3]
[ext_resource path="res://scenes/game/world/entity/components/health/HealthComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/world/objective/ArrowSprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/char/boss/eye.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "take_damage",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "watch_left",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "watch_mid",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "watch_right",
"speed": 5.0
} ]

[node name="Boss" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="HealthComponent" parent="." index="2" instance=ExtResource( 4 )]
max_health = 60

[node name="Sprite" type="Sprite" parent="." index="3"]
position = Vector2( 84, 76 )
texture = ExtResource( 2 )

[node name="HitBox" parent="." index="4" instance=ExtResource( 5 )]
position = Vector2( 84, 20 )
hit_box_action_type = 1
__team = "enemy_team"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="TurretPosLeft" type="Position2D" parent="." index="5"]
position = Vector2( 20, 36 )

[node name="TurretPosRight" type="Position2D" parent="." index="6"]
position = Vector2( 148, 36 )

[node name="SpawnPosLeft" type="Position2D" parent="." index="7"]
position = Vector2( 12, 120 )

[node name="SpawnPosRight" type="Position2D" parent="." index="8"]
position = Vector2( 156, 120 )

[node name="CannonTimer" type="Timer" parent="." index="9"]
wait_time = 2.0

[node name="RocketRogueSpawnTimer" type="Timer" parent="." index="10"]
wait_time = 3.0

[node name="ArrowSprite" parent="." index="11" instance=ExtResource( 6 )]
position = Vector2( -4, 108 )
rotation = -1.5708
frame = 0

[node name="Blockade" type="StaticBody2D" parent="." index="12"]
position = Vector2( 0, 108 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blockade" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="EnterArea" type="Area2D" parent="." index="13"]
position = Vector2( 12, 108 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea" index="0"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="14"]
position = Vector2( 4, 4 )
limit_top = 0
limit_bottom = 0

[node name="CheckPoint" type="Position2D" parent="." index="15"]
position = Vector2( -36, 108 )

[node name="EyeSprite" type="AnimatedSprite" parent="." index="16"]
position = Vector2( 84, 28 )
frames = SubResource( 8 )
animation = "watch_mid"

[node name="DamageFlashTimer" type="Timer" parent="." index="17"]
wait_time = 0.1
one_shot = true

[node name="ExplosionEffectTimer" type="Timer" parent="." index="18"]
wait_time = 0.2

[connection signal="health_depleted" from="HealthComponent" to="." method="_on_HealthComponent_health_depleted"]
[connection signal="hit_received" from="HitBox" to="." method="_on_HitBox_hit_received"]
[connection signal="timeout" from="CannonTimer" to="." method="_on_CannonTimer_timeout"]
[connection signal="timeout" from="RocketRogueSpawnTimer" to="." method="_on_RocketRogueSpawnTimer_timeout"]
[connection signal="body_entered" from="EnterArea" to="." method="_on_EnterArea_body_entered"]
[connection signal="timeout" from="DamageFlashTimer" to="." method="_on_DamageFlashTimer_timeout"]
[connection signal="timeout" from="ExplosionEffectTimer" to="." method="_on_ExplosionEffectTimer_timeout"]
